[project]
name = "networktool"
version = "0.1.0"
description = ""
authors = [
    {name = "Marc Spoorendonk",email = "marc@spoorendonk.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyqt6 (>=6.9.0,<7.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pyqtgraph (>=0.13.7,<0.14.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "wmi (>=1.5.1,<2.0.0)",
    "pyinstaller (>=6.13.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
scapy = "^2.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
